<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="cat">cat</string>
    <string name="description">all maps offline with track writer</string>
    <string name="serviceDescription">track writer</string>

    <string name="km">%1$.1f km</string>
    <string name="closeHint">close app, stop track writer</string>
    <string name="centerMap">center map</string>
    <string name="zPlusHint">increase zoom, long click to increase by 3</string>
    <string name="zMinusHint">decrease zoom, long click to decrease by 3</string>
    <string name="maps">maps</string>
    <string name="tracks">tracks</string>
    <string name="extra">extra</string>
    <string name="searchingTracks">searching tracks…</string>

    <string name="nearSelection">%1$d\u00B0 %2$d m</string>
    <string name="farSelection">%1$d\u00B0 %2$.1f km</string>

    <string name="tracksTitle">tracks (%1$d/%2$d)</string>
    <string name="delete">delete</string>
    <string name="deselect">deselect</string>
    <string name="searchUp">search</string>
    <string name="selectTracks">select tracks</string>
    <string name="deleteTrack">delete track?</string>
    <string name="deleteTracks">delete %1$d tracks?</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="ok" tools:ignore="ButtonCase,Typos">ok</string>

    <string name="satellites">satellites %1$d/%2$d</string>
    <string name="location">lon %1$.6f\u00B0\nlat %2$.6f\u00B0\naltitude %3$d m\naccuracy %4$d m\nspeed %5$d km/h
    </string>
    <string name="track">track %1$s, %2$s</string>
    <string name="copy">copy</string>
    <string name="send">send</string>
    <string name="point">point %1$s</string>
    <string name="tile">tile %1$s</string>
    <string name="cacheText">tiles %1$d, cache %2$d</string>
    <string name="visit">visit %1$s</string>
    <string name="version">version 5.0.0</string>
    <string name="copied">copied</string>
    <string name="noExplorer">no file explorer</string>
    <string name="noViewer">no image viewer</string>
    <string name="noBrowser">no web browser</string>
</resources>