<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/title" android:layout_width="match_parent" android:layout_height="32dp"
        android:gravity="center" android:textColor="@color/mainBlack" android:textSize="14sp"
        android:typeface="monospace" android:textStyle="bold" />
    <FrameLayout android:layout_width="match_parent" android:layout_height="1dp"
        android:background="@color/mainBlack" />
    <ListView android:id="@+id/list" android:layout_width="match_parent" android:layout_height="0dp"
        android:layout_weight="1" android:scrollbarThumbVertical="@color/mainBlack" android:scrollbarSize="4dp"
        android:divider="@null" android:listSelector="@color/backgroundTransparent" />
    <FrameLayout android:layout_width="match_parent" android:layout_height="1dp"
        android:background="@color/mainBlack" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/delete" android:layout_width="match_parent" android:layout_height="32dp"
            android:layout_weight="1" android:gravity="center" android:text="@string/delete"
            android:textColor="@android:color/black" android:textSize="12sp" android:typeface="monospace" />
        <TextView android:id="@+id/deselect" android:layout_width="match_parent" android:layout_height="32dp"
            android:layout_weight="1" android:gravity="center" android:text="@string/deselect"
            android:textColor="@android:color/black" android:textSize="12sp" android:typeface="monospace" />
        <TextView android:id="@+id/searchUp" android:layout_width="match_parent" android:layout_height="32dp"
            android:layout_weight="1" android:gravity="center" android:text="@string/searchUp"
            android:textColor="@android:color/black" android:textSize="12sp" android:typeface="monospace" />
    </LinearLayout>
</LinearLayout>